[css-grid] Fix intrinsic maximums resolution with fit-content and auto

The step 2.5 in section 12.5 https://drafts.csswg.org/css-grid/#algo-content
of the specs, details how to sizes tracks with intrinsic max track sizing
functions.

Not so long ago there were only two max track sizing functions min-content
and max-content (auto was always resolved to max-content). However there
were some recent changes that force us to consider 2 new values: auto (which
is not internally translated to max-content although it still works the
same) and specially the newly added fit-content.

Some of the new tests are commented because they fail due to
https://crbug.com/654737 which is about to be fixed.

BUG=654739

Review-Url: https://codereview.chromium.org/2411673003
Cr-Commit-Position: refs/heads/master@{#424475}