third_party/WebKit/Source/core/layout/LayoutGrid.cpp
@@ -1447,7 +1447,7 @@ static bool shouldProcessTrackForTrackSizeComputationPhase(
     case ResolveMaxContentMinimums:
       return trackSize.hasMaxContentMinTrackBreadth();
     case ResolveIntrinsicMaximums:
-      return trackSize.hasMinOrMaxContentMaxTrackBreadth();
+      return trackSize.hasIntrinsicMaxTrackBreadth();
     case ResolveMaxContentMaximums:
       return trackSize.hasMaxContentOrAutoMaxTrackBreadth();
     case MaximizeTracks:
